
syntax ="proto3";

message RegisterThingTX {
    bytes Nonce =1;
    repeated string Aliases =2;
    string OwnerName =3;
    bytes Signature =4;
    string Data =5;
    string Spec =6;
}

message RegisterOwnerTX{
    string OwnerName =1;
    bytes PubKey =2;
    bytes Signature =4;
    string Data =3;
}

message RegisterSpecTX{
    string SpecName =1;
    string OwnerName =2;
    bytes Signature =3;
    string Data =4;
}